# mannequins

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  pyproject.toml
app/: __init__.py
app/models/: __init__.py  user.py
app/routes/: __init__.py  login.py  register.py  user.py
