[tool.poetry]
name = "mannequins-api"
version = "0.1.0"
description = ""
authors = ["Ato Toffah <atotoffah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.6.0"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

